syntax = "proto3";
package nolus.mint.v1beta1;

option go_package = "gitlab-nomo.credissimo.net/nomo/cosmzone/x/mint/types";

import "gogoproto/gogo.proto";

// Minter represents the minting state.
message Minter {
  string norm_time_passed = 2
  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string total_minted = 3
  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  int64 prev_block_timestamp = 4;
}

message Params {
  // type of coin to mint
  string mint_denom = 1 [
    (gogoproto.nullable)   = false
  ];
  int64 max_mintable_nanoseconds = 2 [
    (gogoproto.nullable)   = false
  ];
}
