syntax = "proto3";
package nolus.tax.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nolus/tax/v1beta1/params.proto";

option go_package = "github.com/Nolus-Protocol/nolus-core/x/tax/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/nomo/nolus-core/tax/params";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}
